chore: implement tests

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "install:examples": "cd testconnection && npm install",
     "start:dev:examples": "cd examples && npm run start:dev",
     "test": "jest --detectOpenHandles --forceExit --config jest.config.ts",
+    "e2e-test": "jest --detectOpenHandles --forceExit --config jest.e2e.config.ts",
     "test:watch": "jest --watch --config jest.config.ts",
     "test:coverage": "jest --detectOpenHandles --forceExit --config jest.config.ts --coverage",
     "start:dev": "cd testconnection && nest start --watch",
