--- a/package.json
+++ b/package.json
@@ -37,10 +37,7 @@
     "nodejs"
   ],
   "scripts": {
-    "build": "tsc -b tsconfig.build.json",
-    "build:examples": "cd examples && npm run build",
-    "install:examples": "cd testconnection && npm install",
-    "start:dev:examples": "cd examples && npm run start:dev",
+    "build": "npm run clean && tsc -b tsconfig.build.json",
     "test": "jest --detectOpenHandles --forceExit --config jest.config.ts",
     "e2e-test": "jest --detectOpenHandles --forceExit --config jest.e2e.config.ts",
     "test:watch": "jest --watch --config jest.config.ts",
@@ -73,6 +70,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "semantic-release": "^24.2.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
