--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,8 @@
 sonar.organization=sailfinio
-sonar.projectKey=sailfinio_tekton
+sonar.projectKey=SailfinIO_tekton
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/node_modules/**,**/dist/**,**/coverage/**,**/test/**,**/migrations/**,**/seeds/**,**/config/**,**/migrations/**,**/seeds/**,**/config/**,**/test/**,**/coverage/**,**/dist/**,**/node_modules/**
-sonar.tests=tests
-sonar.test.inclusions=**/*.spec.ts
+sonar.test.inclusions=**/*.test.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
