--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,24 +34,40 @@ jobs:
       - name: Linting
         run: npm run lint
 
-      - name: Tests
+      - name: Run tests and collect coverage
         run: npm run test:coverage
 
       - name: Build the package
         run: npm run build
 
+      - name: Upload coverage report to workspace
+        if: success()
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage
+          path: coverage/lcov.info
+
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
+    needs: ci
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Download coverage report from workspace
+        uses: actions/download-artifact@v3
+        with:
+          name: coverage
+          path: coverage
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
 
   release:
     needs: ci
