--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=src
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/node_modules/**,**/dist/**,**/coverage/**,**/test/**,**/migrations/**,**/seeds/**,**/config/**,**/migrations/**,**/seeds/**,**/config/**,**/test/**,**/coverage/**,**/dist/**,**/node_modules/**
 sonar.test.inclusions=**/*.test.ts
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
