--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,24 +1,21 @@
 {
-  "branches": [
-    "main",
-    {
-      "name": "prerelease",
-      "prerelease": true,
-      "tag": "prerelease"
-    }
-  ],
+  "branches": ["main", "beta"],
   "plugins": [
-    "@semantic-release/commit-analyzer",
-    {
-      "preset": "conventionalcommits",
-      "releaseRules": [
-        { "type": "feat", "release": "minor" },
-        { "type": "fix", "release": "patch" },
-        { "type": "chore", "release": false },
-        { "type": "docs", "release": false },
-        { "type": "refactor", "release": "patch" }
-      ]
-    },
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "preset": "conventionalcommits",
+        "releaseRules": [
+          { "type": "feat", "release": "minor" },
+          { "type": "fix", "release": "patch" },
+          { "type": "chore", "release": false },
+          { "type": "docs", "release": false },
+          { "type": "refactor", "release": "patch" },
+          { "type": "style", "release": false },
+          { "type": "test", "release": false }
+        ]
+      }
+    ],
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "@semantic-release/npm",
