--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,6 +2,7 @@
   "branches": ["main", "beta"],
   "plugins": [
     [
+      "@semantic-release/commit-analyzer",
       {
         "preset": "conventionalcommits",
         "releaseRules": [
@@ -12,10 +13,12 @@
           { "type": "refactor", "release": "patch" },
           { "type": "style", "release": false },
           { "type": "test", "release": false }
-        ]
+        ],
+        "parserOpts": {
+          "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES"]
+        }
       }
     ],
-    "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "@semantic-release/npm",
@@ -28,5 +31,6 @@
         "push": true
       }
     ]
-  ]
+  ],
+  "preset": "conventionalcommits"
 }
