chore: fix release strategy

--- a/package.json
+++ b/package.json
@@ -108,5 +108,8 @@
       "import": "./dist/index.js",
       "require": "./dist/index.js"
     }
+  },
+  "dependencies": {
+    "conventional-changelog-conventionalcommits": "^8.0.0"
   }
 }
