--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,11 @@
 {
-  "branches": ["main", "beta"],
+  "branches": [
+    "main",
+    {
+      "name": "beta",
+      "prerelease": true
+    }
+  ],
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
