--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@sailfin/tekton",
   "version": "0.0.3",
   "description": "A Tekton and K8s client for Node.js",
-  "author": "Michael Curtis <mpbcurtis@gmail.com>",
+  "author": "Michael Curtis <michael@sailfin.io>",
   "readme": "README.md",
   "contributors": [
     {
@@ -55,7 +55,7 @@
     "typescript": ">=4.0.0"
   },
   "devDependencies": {
-    "@nestjs/testing": "^10.4.7",
+    "@nestjs/testing": "^10.4.13",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/git": "^10.0.1",
@@ -63,21 +63,21 @@
     "@semantic-release/npm": "^12.0.1",
     "@types/cache-manager": "^4.0.6",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.9.0",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
-    "eslint": "^9.14.0",
+    "@types/node": "^22.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "nock": "^13.5.6",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
     "semantic-release": "^24.2.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.26.11",
-    "typescript": "^5.6.3",
+    "typedoc": "^0.27.3",
+    "typescript": "^5.7.2",
     "conventional-changelog-conventionalcommits": "^8.0.0"
   },
   "files": [
