fix email in package lock

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "contributors": [
     {
       "name": "Michael Curtis",
-      "email": "mpbcurtis@gmail.com",
+      "email": "michael@sailfin.io",
       "url": "https://github.com/mcereal"
     }
   ],
   "maintainers": [
     {
       "name": "Michael Curtis",
-      "email": "mpbcurtis@gmail.com",
+      "email": "michael@sailfin.io",
       "url": "https://github.com/mcereal"
     }
   ],
